syntax = "proto3";
package todo;

import "google/api/annotations.proto";

message Todo {
  int32 id = 1;
  string text = 2;
  bool complete = 3;
}

message ListTodoRequest {}
message ListTodoResponse {
  repeated Todo todos = 1;
}

service TodoService {
  rpc ListTodo (ListTodoRequest) returns (ListTodoResponse) {
    option (google.api.http) = {
      get: "/todos"
    };
  }
}
